springboot/k8s/template/microsvc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${NAME}
  namespace: ${NS}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP}
      name: ${NAME}
  template:
    metadata:
      labels:
        app: ${APP}
        name: ${NAME}
    spec:
      containers:
        - name: ${NAME}
          image: ${IMAGE}:${IMAGE_TAG}
          imagePullPolicy: ${IMAGE_POLICY}
          ports:
            - name: http-port
              containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: ${NAME}
  labels:
    name: ${NAME}
  namespace: ${NS}
spec:
  selector:
    name: ${NAME}
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http-port
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${NAME}
  namespace: ${NS}
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /${NAME}/$2
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: Authorization, origin, accept
    nginx.ingress.kubernetes.io/cors-allow-methods: GET, PUT, POST, DELETE, OPTIONS
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
    - host: ${HOST}
      http:
        paths:
          - path: /${NAME}(/|$)(.*)
            pathType: Exact
            backend:
              service:
                name: ${NAME}
                port:
                  number: 80
