springboot/k8s/template/mysql5.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP}
  namespace: ${NS}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP}
  template:
    metadata:
      labels:
        app: ${APP}
    spec:
      containers:
        - name: ${APP}
          image: mysql:5
          imagePullPolicy: IfNotPresent
          ports:
            - name: tcp-port
              containerPort: 3306
        - name: ${APP_PHPMYADMIN}
          image: ${IMAGE_PHPMYADMIN}:${IMAGE_PHPMYADMIN_TAG}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http-port
              containerPort: 80

---
kind: Service
apiVersion: v1
metadata:
  name: ${APP}
  namespace: ${NS}
spec:
  selector:
    app: ${APP}
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http-port
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: tcp-port
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP}
  namespace: ${NS}
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: "20M"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: ${HOST}
      http:
        paths:
          - path: /${APP}(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ${APP}
                port:
                  number: 80
